# bookmarks.alfredworkflow

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
workflow/: info.plist
