[package]
name = "bookmarks-alfred-workflow"
version = "1.1.1"
authors = ["Joscha"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.56"
log = { version = "0.4.14", features = ["std"] }
powerpack = { version = "0.4.1", features = ["detach"] }
json = "0.12.4"
fuzzy-matcher = "0.3.7"
itertools = "0.10.2"